test/udt-undefined-constructor.ktn
data Defined:
  case Defined

match (Defined::Defined):
  case Undefined {}
